# mcmgr

./: .gitignore  Cargo.toml  LICENSE
mcmgr-cli/: Cargo.toml
mcmgr-core/: Cargo.toml
mcmgr-daemon/: Cargo.toml
mcmgr_daemon/: Cargo.toml
mcmgr_daemon/src/: main.rs
mcmgr_server/: Cargo.toml
mcmgr_server/src/: config.rs  event.rs  instance.rs  lib.rs
src/: main.rs
src/server/: instance.rs  mod.rs
