# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[env]
RUST_LOG="debug"

[package]
name = "mcmgr"
version = "0.1.0"
authors = [ "Hess Lewis <hrl@hrlou.net>" ]
edition = "2021"
description = "Minecraft Server Manager"
homepage = "https://git.hrlou.net/hrlou/mcmgr"
keywords = [ "minecraft", "manager", "server", "java" ]

[dependencies]
anyhow = "1.0.69"
clap = "4.1.6"
derive_builder = "0.12.0"
env_logger = "0.10.0"
log = "0.4.17" 
mcmgr_server = { path = "./mcmgr_server" }

[workspace]
members = [ "mcmgr_server", "mcmgr_daemon" ]
